# jvm-toolbox

./: .gitignore  CMakeLists.txt  README.md
examples/hello_world/: build.gradle
examples/hello_world/src/main/java/com/example/: HelloWorld.java
lib/: CMakeLists.txt
lib/injector/: CMakeLists.txt
lib/injector/src/: injector.cpp  injector.hpp  main.cpp
lib/inspector/: CMakeLists.txt
lib/inspector/src/: headless.cpp  headless.hpp  inspector.cpp  inspector.hpp
lib/inspector/src/events/: base_event.hpp  class_file_load_event.cpp  class_file_load_event.hpp  event_manager.cpp  event_manager.hpp  vm_death_event.cpp  vm_death_event.hpp
lib/inspector/src/interfaces/: java_interface.hpp  jvmti_interface.cpp  jvmti_interface.hpp
lib/inspector/src/types/: types.hpp
lib/inspector/src/types/class/: java_class.cpp  java_class.hpp  java_field.hpp  java_stack_frame.hpp  java_thread.hpp
lib/inspector/src/types/method/: java_method.cpp  java_method.hpp
lib/inspector/src/types/object/: java_object.hpp
lib/inspector/src/utility/: jni_error.cpp  jni_errors.hpp
shared/: CMakeLists.txt
shared/ipc/: CMakeLists.txt
shared/ipc/include/: consumer.hpp  ipc.hpp  producer.hpp  shared_memory_exception.hpp  shared_memory_manager.hpp
shared/ipc/include/messages/: inspector_data_generated.h  inspector_info_generated.h
shared/ipc/include/messages/jvm_toolbox_flatbuffers/inspector/: JavaClass.java  JavaField.java  JavaMethod.java  JavaObject.java  JavaStackFrame.java  JavaThread.java  LineData.java  OnBreakpoint.java  OnClassFileLoad.java  OnClassLoad.java  OnClassPrepare.java  OnException.java  OnExceptionCatch.java  OnFieldAccess.java  OnFieldModification.java  OnFramePop.java  OnInspectorLoaded.java  OnSingleStep.java  OnThreadEnd.java  OnThreadStart.java  OnVMDeath.java  OnVMObjectAllocated.java  OnVMObjectFree.java
shared/ipc/include/messages/schemas/: generate_all.bat  inspector_data.fbs  inspector_info.fbs
shared/ipc/src/: consumer.cpp  main.cpp  shared_memory_manager.cpp
shared/ipc/test/: consumer_producer_tests.cpp  main.cpp  shared_memory_manager_test.cpp
shared/ipc/test/flatbuffers/: test.fbs  test_generated.h
